about page FontAwesomeIcon not showing in iOS fixed

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -13,6 +13,7 @@
 
 html,
 body {
+    text-rendering: optimizeLegibility;
     min-width: 300px;
     padding: 0;
     margin: 0;
